--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,10 +4,11 @@ pipeline {
             stage('load parameters') { 
             steps {
                 load "parameters.groovy"
-            }
-        }
+       }
         stage('source code checkout') {
-		"when { expression { env.SAST_GIT_URL != null } }"
+		when { 
+		expression { env.SAST_GIT_URL != null } 
+		}
             steps {
                	 			git "${env.SAST_GIT_URL}"
 					sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
@@ -63,7 +64,9 @@ pipeline {
             }
 	 }
 	stage('deploy to tomcat') {
-	"when { expression { env.TOMCAT_IP != null } }"
+	when { 
+	expression { env.TOMCAT_IP != null }
+	}
             			steps {
 					script {
 						try {
@@ -80,7 +83,9 @@ pipeline {
 				}
 	}
 	stage('FunctionalAutomation_Web') {
-	"when { expression { env.FUNCTIONAL_WEB_GIT_URL != null } }"
+	when { 
+	expression { env.FUNCTIONAL_WEB_GIT_URL != null } 
+	}
            			steps {
 		   			script {
 						try {
@@ -97,7 +102,9 @@ pipeline {
 	 		}
 	 }
 	stage('FunctionalAutomation_Mobile') {
-	"when { expression { env.FUNCTIONAL_MOBILE_GIT_URL != null } }"
+	when { 
+	expression { env.FUNCTIONAL_MOBILE_GIT_URL != null } 
+	}
             				steps {
 		   			script {
 						try {
@@ -135,7 +142,9 @@ pipeline {
 			}
 	}
         stage('Performance') {
-		"when { expression { env.JMETER_GIT_URL != null } }"
+		when { 
+		expression { env.JMETER_GIT_URL != null } 
+		}
             			steps {
 		   			script {
 						try {
@@ -155,7 +164,9 @@ pipeline {
 			}
 		}
 	stage('upload reports to nexus') {
-	"when { expression { env.NEXUS_IP != null } }"
+	when { 
+	expression { env.NEXUS_IP != null } 
+	}
             steps {
 	    			sh 'zip -r web-test-report-${BUILD_NUMBER}.zip webtest/src/test/java/com/shoppingcart/Reports/*'
 	    			sh 'zip -r mobile-test-report-${BUILD_NUMBER}.zip mobiletest/src/test/java/com/shoppingcart/Reports/*'
