--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,12 +6,8 @@ pipeline {
                 load "parameters.groovy"
        }
         stage('source code checkout') {
-		 when {
-                	allOf {
-                    		expression { env.SAST_GIT_URL != null }
-                }
-	   }
-            steps {
+		when { expression { env.SAST_GIT_URL != null } }
+            	steps {
                	 			git "${env.SAST_GIT_URL}"
 					sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
             }
