--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,17 +6,13 @@ pipeline {
                 load "parameters.groovy"
             }
         }
-        stage('source code checkout') {
-	                    when { expression { env.SAST_GIT_URL != null } }
-            steps {
-               	 			git "${env.SAST_GIT_URL}"
-					sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
-            }
-        }
         stage('SAST analysis') {
             steps {
+	                    when { expression { env.SAST_GIT_URL != null } }
 			      script {
 						try {
+               	 			                git "${env.SAST_GIT_URL}"
+					                sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
 							sh 'cp -r sonarqube-scanner-scripts/* .'
 							sh './sonar-scanner-4.6.2.2472-linux/bin/sonar-scanner'
 							sh 'ls -al'
@@ -63,6 +59,7 @@ pipeline {
             }
 	 }
 	stage('deploy to tomcat') {
+	                    when { expression { env.TOMCAT_IP != null } }
             			steps {
 					script {
 						try {
@@ -79,6 +76,7 @@ pipeline {
 				}
 	}
 	stage('FunctionalAutomation_Web') {
+	                    when { expression { env.FUNCTIONAL_WEB_GIT_URL != null } }
            			steps {
 		   			script {
 						try {
@@ -95,6 +93,7 @@ pipeline {
 	 		}
 	 }
 	stage('FunctionalAutomation_Mobile') {
+	                    when { expression { env.FUNCTIONAL_MOBILE_GIT_URL != null } }
             				steps {
 		   			script {
 						try {
@@ -132,6 +131,7 @@ pipeline {
 			}
 	}
         stage('Performance') {
+	                    when { expression { env.JMETER_GIT_URL != null } }
             			steps {
 		   			script {
 						try {
@@ -151,6 +151,7 @@ pipeline {
 			}
 		}
 	stage('upload reports to nexus') {
+	                    when { expression { env.NEXUS_IP != null } }
             steps {
 	    			sh 'zip -r web-test-report-${BUILD_NUMBER}.zip webtest/src/test/java/com/shoppingcart/Reports/*'
 	    			sh 'zip -r mobile-test-report-${BUILD_NUMBER}.zip mobiletest/src/test/java/com/shoppingcart/Reports/*'
