--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('SAST analysis') {
             steps {
-	                    when { expression { env.SAST_GIT_URL != null } }
+	                    when { expression { env.SAST_GIT_URL == null } }
 			      script {
 						try {
                	 			                git "${env.SAST_GIT_URL}"
