--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
         stage('SAST analysis') {
             steps {
 			      script {
+                    when { expression { env.SAST_GIT_URL == null } }
 						try {
                	 			                git "${env.SAST_GIT_URL}"
 					                sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
