--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
 			}
 	}
         stage('SCA') {
-                    when { expression { env.SAST_GIT_URL == null } }
+                    when { expression { env.SAST_GIT_URL =! null } }
 
             steps {
 			      script {
