--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,11 @@ pipeline {
     agent any
 
     stages {
+                stage('load parameters') { 
+            steps {
+                load "parameters.groovy"
+            }
+        }
         stage('Build') {
             steps {
                 echo 'Building..'
