--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,8 @@ pipeline {
             }
         }
         stage('Build') {
+        when { expression { env.SAST_GIT_URL == null } }
+
             steps {
                 echo 'Building..'
             }
