--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
 
             steps {
                 echo 'Building..'
-                echo ' sast value ${env.SAST_GIT_URL}............................ '
+                echo " sast value ${env.SAST_GIT_URL}............................ "
             }
         }
         stage('Test') {
