--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
             }
         }
         stage('Build') {
-                    when { expression { $env.SAST_GIT_URL == null } }
+                    when { expression { env.SAST_GIT_URL == null } }
             steps {
                 echo 'Building..'
                 echo " sast value ${env.SAST_GIT_URL}............................ "
