--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,6 +17,8 @@ pipeline {
         stage('Test') {
             steps {
                 echo 'Testing..'
+                echo " sast value ${env.SAST_GIT_URL}............................ "
+
             }
         }
         stage('Deploy') {
