--- a/jenkinsfile
+++ b/jenkinsfile
@@ -61,7 +61,11 @@ pipeline {
             steps {
 				script {
 						try {
+						if (env.SAST_GIT_URL != 'null') {
 							sh 'mvn clean package'
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
@@ -75,8 +79,12 @@ pipeline {
             			steps {
 					script {
 						try {
+						if (env.TOMCAT_IP != 'null') {
 							sshagent(['deploy_user']) {
 							sh "scp -o StrictHostKeyChecking=no target/*.war ec2-user@${env.TOMCAT_IP}:/opt/tomcat/webapps"		
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
 						}
 						} catch (err) {
 							echo err.getMessage()
@@ -91,9 +99,13 @@ pipeline {
            			steps {
 		   			script {
 						try {
+						if (env.FUNCTIONAL_WEB_GIT_URL != 'null') {
 							sh """git clone ${env.FUNCTIONAL_WEB_GIT_URL}
 							cd webtest
 							mvn test """
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
@@ -107,9 +119,13 @@ pipeline {
             				steps {
 		   			script {
 						try {
+						if (env.SAST_GIT_URL != 'null') {
 							sh """ git clone ${env.FUNCTIONAL_MOBILE_GIT_URL}
 							cd mobiletest
 							mvn test """
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
@@ -144,12 +160,16 @@ pipeline {
             			steps {
 		   			script {
 						try {
+						if (env.JMETER_GIT_URL != 'null') {
 							sh 'pwd'
 							sh 'ls -al'
 							sh "git clone ${env.JMETER_GIT_URL}"
 							sh """cd folder
 							chmod 777 -R *
 							./apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html """
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
             					} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
